# DataAgent

./: .env.example  .gitignore  AGENTS.md  CONFIG_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  README.md  config.example  example_config.py  fix_typo.py  pyproject.toml  setup_config.py  test_code_agent.py  test_code_agent_quick.py  test_formula.py  test_generate_code.py  test_parse.py
ExcelData/: Covid Dashboard.xlsx
ExcelData/Structured_MD/: Active_And_Deaths.md  Cases_and_Recovered.md  DashBoard.md  Data.md  Death_Index.md  Recovered_Index.md  Sheet1.md  States_and_Zones.md
Script/: custom_provider.py  excel_to_markdown.py
Script/code_agent/: __init__.py  agent.py  fix_agent.py  graph.py  nodes.py  state.py
Script/codebox/: README.md  __init__.py  code_executor.py  examples.py  test_executor.py
Script/generate_code/: README.md  __init__.py  examples.py  fix_test.py  generator.py  test_generator.py
experiment/: README.md  custom_provider.py  test_connection.py  test_excel_read.py  test_smolagents.py
tests/: README.md  TESTING_SUMMARY.md  TEST_STATUS.md  __init__.py  calculate_text_stats.py  conftest.py  create_test_excel.py  test_code_agent.py
tests/resource/: README.md  test_students.xlsx  test_text.txt
